day-5/ingress-example/tls/5-ingress-rewrite-with-regex.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - www.eylon.com
      secretName: eylon-com-cert
  rules:
    - host: www.eylon.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/hello(/|$)(.*)"
            backend:
              service:
                name: hello
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: "/world(/|$)(.*)"
            backend:
              service:
                name: world
                port:
                  number: 80
